# tacg

./: AUTHORS  COPYRIGHT  ChangeLog  Cutting.c  GelLadSumFrgSits.c  INSTALL  Makefile.am  Makefile.in  MatrixMatch.c  NEWS  ORF.c  Proximity.c  README  README.md  ReadEnzFile.c  ReadMatrix.c  ReadRegex.c  RecentFuncs.c  SeqFuncs.c  SetFlags.c  SlidWin.c  config.guess  configure  configure.in  control  mkinstalldirs  seqio.c  seqio.h  tacg.c  tacg.h
Data/: codon.data  matrix.data  rebase.dam+dcm.data  rebase.dam.data  rebase.data  rebase.dcm.data  regex.data  rules.data
Docs/: nedit.macros  tacg-4.3-manual.html  tacg-4.3-manual.txt  tacg.1  tacg4.0.main.html  tacg4.man.html  tacg4.xman.html
Seqs/: hlef.seq  hsp.cluster.1000.fasta  humanprlreceptor.gb  humanprlreceptor.gcg  humprlrec.pep.fasta  test.embl  test.fasta  test.fitch  test.gb  test.gcg  test.ig  test.ig-b  test.m-embl  test.m-fasta  test.m-gb  test.m-ig  test.m-ig-b  test.m-msf  test.m-nbrf  test.m-paup  test.m-pir  test.nbrf  test.pir  test.strider
tacgi4/: form4.html.in  index.html.in  nedit.macros  tacg_web_install.pl  tacgi4-cgi.pl.in  tacgi4.pl.in
test/: testtacg.pl
