dnl Process this file with autoconf to produce a configure script.
AC_INIT(tacg.c)
AM_INIT_AUTOMAKE(tacg, 4.6.0)
AC_CANONICAL_HOST

case "$host_os" in
    irix*) os=irix ;;
esac
PORTNAME=${os}


dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_ISC_POSIX

# Check for ghostscript - not needed anymore.
# AC_PATH_PROG(GS_PATH, gs, "NOT_FOUND")
AC_CHECK_PROG(DOXYGEN,doxygen,"TRUE","FALSE")
if (test "${DOXYGEN}" = 'TRUE'); then
	echo "   INFO: doxygen found; can build doxygen files with 'make doxydocs'"
	DOXY='TRUE'
else
	DOXY='FALSE'
	echo "   INFO: doxygen NOT found; can build tacg, but CANNOT build doxygen docs"
	echo "   Install the doxygen documentation system and try again if you need it."
fi
sleep 1

dnl Check for st_blksize in struct stat
AC_ST_BLKSIZE

dnl Checks for libraries.
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, sin)

# dnl Replace `main' with a function in -lnsl:
# AC_CHECK_LIB(nsl, nis_local_directory)
# dnl Replace `main' with a function in -lsocket:
# AC_CHECK_LIB(socket, getnetbyaddr_r)

dnl Checking for the pcre lib
AC_CHECK_LIB(pcre, pcre_exec,,have_pcre=no)

   if test "$have_pcre" = "no"; then
         echo " !!!  tacg needs pcre for regex searching !!! "
         echo " try [apt-get install libpcre3-dev] "
         echo " or get it from pcre.org"
         exit 1
   fi

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_STRUCT_TM
AC_TYPE_UID_T

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_FUNC_ALLOCA

AC_CHECK_FUNCS(putenv strsep strdup strspn strstr uname)

AC_OUTPUT(Makefile)
